# accumulation

./: .gitignore  README.md  error_ctrl.h
AC/: All_Roads_Lead_to_Rome.cpp  Broken_Keyboard.cpp  CMakeLists.txt  Graduate_Admission.cpp  Insert_or_Merge_err.cpp  main.cpp  one_edit_distance.cpp
AC/suc/: Acute_Stroke.cpp  Highest_Price_in_Supply_Chain.cpp  Perfect_Sequence.cpp  Rational_Sum.cpp  Tree_Traverse_again.cpp  number_of_island.cpp
algorithm/: graph.cpp
algorithm/A_star_search/: A_star_search.h  CMakeLists.txt  test.cpp
algorithm/kd_tree/: readme
algroithm/: graph.h
algroithm/kd_tree/: kd_tree.h  test.cpp
assert/: assert_ext.h  assertext.h  assure.h  test_assert.cpp
bilateral_normal_filtering/: CMakeLists.txt  bilater_normal_filter.cpp  bilater_normal_filter.h  bilateral_normal_filter.cpp
bilateral_normal_filtering/test/: CMakeLists.txt  test_mesh.cpp
cmake/: FindEigen3.cmake  FindFlann.cmake  FindOpenMesh.cmake  FindZSW_LIB.cmake  cmake_self_win32.cmake  geo_sim_sdk.cmake  zsw.cmake
cmake/latest/: FindG2O.cmake  cmake_self.cmake  common.cmake
config_parser/: config_parser.h  test_cfg_parser.cpp
converter/: matrix_conv.h  test.cpp
demos/dynamic_link/: base_solver.h  dl_solver.h  main.cpp
demos/dynamic_link/dllib/: zsw_solver.h
demos/ipopt/: CMakeLists.txt  zsw_main.cpp
demos/maxima2c/hj/: CMakeLists.txt
demos/maxima2c/jac_hes_err/: jac_hes_err.h
demos/maxima2c/jtf/: CMakeLists.txt  main.cpp
demos/maxima2c/maxima_example/: Energy.mac  testQuat.wxm
demos/maxima2c/pzr/: CMakeLists.txt  collision_energy.cpp  collision_energy.h  collision_energy.wxm
demos/metal/texture_quad/Application/: main.m
demos/metal/texture_quad/Application/macOS/Base.lproj/: Main.storyboard
demos/metal/texture_quad/Renderer/: AAPLRenderer.mm  AAPLShaders.metal  app.h  app.mm  fullscreen_pass.h  fullscreen_pass.mm  texture_quad.mm
demos/metal/texture_quad/texture_quad.xcodeproj/: project.pbxproj
demos/metal/texture_quad/texture_quad.xcodeproj/project.xcworkspace/xcuserdata/wegatron.xcuserdatad/: UserInterfaceState.xcuserstate
demos/metal/texture_quad/texture_quad.xcodeproj/xcshareddata/xcschemes/: Demo-iOS.xcscheme  Demo-macOS.xcscheme
demos/octave_matlab/: trial.m
demos/opengles/: CMakeLists.txt  eglExample_windows.cpp  vs.user.in
demos/osg/: CMakeLists.txt  test.cpp
demos/qt_basic/: CMakeLists.txt  cmenu.cpp  cmenu.h  cwidget.cpp  cwidget.h  main.cpp
demos/qt_cmenu/: CMakeLists.txt  cmenu.cpp  cmenu.h  main.cpp  mainwindow.cpp  mainwindow.h  qevent_adapter.cpp  qevent_adapter.h  stylesheet.qss
demos/qtosg/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  osgwidget.cpp  osgwidget.h  text_camera.h
demos/visit_struct/: CMakeLists.txt  main.cpp  visit_struct.hpp
demos/vs_create_dump/: CMakeLists.txt  CreateDump.cpp  CreateDump.h  main.cpp
doc/: mtl_doc
dynamic_link/: CMakeLists.txt  dl_solver.cpp
dynamic_link/dllib/: zsw_solver.cpp
error/: error.h
io/: zsw_io.cpp  zsw_io.h
io/example/: main.cpp
io/stream/: stream.cpp
kd_tree/: CMakeLists.txt  kd_tree.cpp  kd_tree.h  test.cpp
log/: CMakeLists.txt  test.cpp  zsw_log.cpp  zsw_log.h
math/: main.cpp
math/linear_solver/: CMakeLists.txt  gauss_solver.cpp  gauss_solver.h
math/nonlinear_solver/: CMakeLists.txt  main.cpp  nonlinear_solver.cpp  nonlinear_solver.h
maxima2c/jac_hes_err/: jac_hes_err.cpp  jac_hes_err.h
maxima2c/jtf/: test.f  test.h  test.mac
maxima2c/maxima_example/: Quat.mac  testEnergy.wxm
maxima2c/pzr/: test.cpp
nvdiffrast/: obj_render.py
qt/: custom_menu
qt/basic/: CMakeLists.txt  cmenu.cpp  cmenu.h  main.cpp  mainwidnow.cpp  mainwindow.h  stylesheet.qss
scripts/cf_scripts/: all_fine  all_fine_v2  fast  test
stream/: stream.cpp  test
test/: CMakeLists.txt  main.cpp  test_error_ctrl.cpp  test_zsw.m
tools/cmake/: CMakeLists.txt  test_lib.cpp  test_lib_config.cmake.in
tools/cmake/usage/: CMakeLists.txt  main.cpp
tools/evo_wrapper/: analysis.py  evo_compare.py
tools/imgs_2_gif/: imgs_2_gif.py
tools/matlab/: video_reader.m
tools/visual_studio/: boost_list_files.txt  list_files.txt  pcl_transform.txt
tools/vscode/: cmake.json  markdown.json
tools/windows_performance_recorder/: CMakeLists.txt  config.json  main.cpp
tools/yasnippet/: cfl  todo
vector_field_deform/: CMakeLists.txt  VTKWriter.h  blender_functions.h  implicit_tools.cpp  implicit_tools.h  integrate.cpp  integrate.h  quad_scalar_field.mac  scalar_field.cpp  scalar_field.h  test.cpp  vector_field.cpp  vector_field.h
vector_field_deform/doc/: vector_field_based_shape_deformation.tex
vector_field_deform/test/: .#test_implicit_tool.cpp  CMakeLists.txt  jac_hes_err.h  test_blend_func.cpp  test_implicit_tool.cpp  test_linear_scalar_field.cpp  test_region_func.cpp  test_vector_field.cpp  test_vector_field.wxm
zswlib/: CMakeLists.txt  command_line_praser.h  config.h  const_val.h  data_cache.hpp  data_type.h  error_ctrl.h  matrix_type.h  zsw_clock.h
zswlib/config_parser/: example.conf
zswlib/converter/: CMakeLists.txt
zswlib/demo/: CMakeLists.txt  main.cpp
zswlib/gz/: CMakeLists.txt  gz_transform.hpp
zswlib/gz_common/: CMakeLists.txt  lasser3d_io.cpp  lasser3d_io.h
zswlib/io/: CMakeLists.txt
zswlib/io/example/: CMakeLists.txt
zswlib/io_common/: CMakeLists.txt  FindZSW_LIB.cmake  lasser3d_io.cpp  lasser3d_io.h  py_interface.cc  vtk_demo.cxx  zsw_vtk_io.cpp  zsw_vtk_io.h
zswlib/io_common/msvc2013_win32/: CMakeLists.txt
zswlib/log/: zsw_log.h
zswlib/matlab/: MatrixToVTK.m
zswlib/mesh/: EdgeFlipMean.h  edge_flip.h  mesh_op.cpp  mesh_op.h  mesh_type.h  util.h  zsw_flann.h
zswlib/mesh/test/: CMakeLists.txt  test_edge_flip.cpp  test_flann.cpp  test_rRingVertex.cpp
zswlib/point_in_polygon/: CMakeLists.txt  demo.cpp  params_in_polygon.cpp  params_in_polygon.h  params_in_polygon.json  point_in_polygon.cpp  point_in_polygon.h
zswlib/test/: CMakeLists.txt  test_nth_vector.cpp
zswlib/vtk/: CMakeLists.txt  demo.cpp  vs.user.in  zsw_vtk_io.h
(+2 files in other folders)
