CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( qtosg )

SET( CMAKE_CXX_FLAGS "-std=c++11 -Wall -pedantic -Wno-long-long" )

SET( CMAKE_INCLUDE_CURRENT_DIR ON )
SET( CMAKE_AUTOMOC ON )

FIND_PACKAGE( Qt4 REQUIRED QtCore QtGui QtOpenGL)
FIND_PACKAGE( OpenSceneGraph REQUIRED COMPONENTS osgGA osgUtil osgViewer osgDB osgManipulator)

INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ${OPENSCENEGRAPH_INCLUDE_DIRS} )

FILE(GLOB header *.h)
FILE(GLOB src *.cpp)

ADD_EXECUTABLE( qtosg ${header} ${src} )

TARGET_LINK_LIBRARIES( qtosg
  ${OPENSCENEGRAPH_LIBRARIES}
  ${QT_LIBRARIES}
)
