add_executable(test_linear_scalar_field test_linear_scalar_field.cpp)

target_link_libraries(test_linear_scalar_field vector_fields)

add_executable(test_blend_func test_blend_func.cpp)

target_link_libraries(test_blend_func vector_fields)

add_executable(test_region_func test_region_func.cpp)

target_link_libraries(test_region_func vector_fields)